[package]
name = "monitor"
version = "0.2.1"
authors = ["AUTHOR: Adrian Challinor "]

[dependencies]
devise = "0.3.1"
rocket = "^0.4"
chrono =  "^0.4"
uptime_lib = "0.2"
libc = "^0.2"
systemstat = "^0.1"
uname = "^0.1"
clap = { version = "3.2.16", features = ["derive"] }
hostname = "0.3.1"
time = "0.3.12"


